--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,8 @@
 pandoc: '2.5'
 pkgdown: 2.0.7
 pkgdown_sha: ~
-articles:
-  hydroTSM_Vignette-knitr: hydroTSM_Vignette-knitr.html
-last_built: 2024-01-16T18:17Z
+articles: {}
+last_built: 2024-01-17T20:50Z
 urls:
   reference: https://hzambran.github.io/hydroTSM/reference
   article: https://hzambran.github.io/hydroTSM/articles
