--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: hydroTSM
 Type: Package
 Title: Time Series Management and Analysis for Hydrological Modelling
-Version: 0.7-26
+Version: 0.7-27
 Authors@R: c( person("Mauricio Zambrano-Bigiarini", email = "mzb.devel@gmail.com", role=c("aut", "cre", "cph"), comment=c(ORCID = "0000-0002-9536-643X")) )
 Maintainer: Mauricio Zambrano-Bigiarini <mzb.devel@gmail.com>
 Description: S3 functions for management, analysis, interpolation and plotting of time series used in hydrology and related environmental sciences. In particular, this package is highly oriented to hydrological modelling tasks. The focus of this package has been put in providing a collection of tools useful for the daily work of hydrologists (although an effort was made to optimise each function as much as possible, functionality has had priority over speed). Bugs / comments / questions / collaboration of any kind are very welcomed, and in particular, datasets that can be included in this package for academic purposes.
@@ -10,10 +10,10 @@ Depends: R (>= 3.5.0), zoo (>= 1.7-2)
 Imports: xts (>= 0.9-7), e1071, stats, utils, methods, graphics, grDevices, lattice, classInt, timechange
 Suggests: knitr, rmarkdown, gridExtra
 VignetteBuilder: knitr
-URL: https://github.com/hzambran/hydroTSM, https://cran.r-project.org/package=hydroTSM
+URL: https://github.com/hzambran/hydroTSM, https://cran.r-project.org/package=hydroTSM, https://hzambran.github.io/hydroTSM/
 MailingList: https://stat.ethz.ch/mailman/listinfo/r-sig-ecology
 BugReports: https://github.com/hzambran/hydroTSM/issues
 LazyLoad: yes
 NeedsCompilation: no
 Repository: CRAN
-Packaged: Fri Dec 26 19:16:11 -03 2025 ; hzambran
+Packaged: Fri Dec 26 19:40:11 -03 2025 ; hzambran
